transpose, inverse functions now fully support Z3 constraint size checking